added code quality static cppcheck

--- a/.github/workflows/cppcheck.yml
+++ b/.github/workflows/cppcheck.yml
@@ -1,31 +1,20 @@
 name: Code Quality - Static Code - Cppcheck
 
-
 on:
-  
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
-  
-  workflow_dispatch:
-
-
 jobs:
-  
-  build:
-    
+  cppcheck:
+
     runs-on: ubuntu-latest
 
-    
     steps:
-  
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
+    - name: Install cppcheck
+      run: sudo apt -y install cppcheck
+    - name: Run cppcheck
+      run: cppcheck 3_Implementation
 
-      - name: Run a one-line script
-        run: echo Hello, world!
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
